--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 
 <h1>Final Show Website</h1>
-
+<nav>
+  <ul>
+    <li><a routerLink='/'>Home</a></li>
+    <li><a routerLink='/login'>Log in</a></li>
+    <li><a routerLink='/livestream'>Livestream</a></li>
+    <li><a routerLink='/timetable'>Timetable</a></li>
+    <li><a routerLink='/faq'>FAQ</a></li>
+    <li><a routerLink='/network'>Netwerk</a></li>  
+  </ul>
+</nav>
 
 <router-outlet></router-outlet>
