database integration (timetable), placeholderpages

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,1 +1,8 @@
-<p>faq works!</p>
+<h2>Helpdesk</h2>
+<ul>
+    <li><h3>Waarvoor is deze site?</h3>
+        <p>Deze site is voor het evenement van de Final Show van de opleiding Multimedia en Communicatie technologie. Meer informatie over de opleiding vind je <a href="https://www.erasmushogeschool.be/nl/opleidingen/multimedia-communicatietechnologie">hier</a>.</p>
+    </li>
+    <li><h3>Waar kan ik de livestream bekijken?</h3>
+    <p>Dat kan <a routerLink="/livestream">hier</a>.</p></li>
+</ul>
