--- a/src/app/livestream/livestream.component.html
+++ b/src/app/livestream/livestream.component.html
@@ -1,1 +1,2 @@
-<p>livestream works!</p>
+<h2>Livestream (placeholder)</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/G0IBqtO1K28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
