--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<h1>Welkom op de final show website!</h1>
+<nav>
+    <ul>
+      <li><a routerLink='/login'>Log in</a></li>
+      <li><a routerLink='/livestream'>Livestream</a></li>
+      <li><a routerLink='/timetable'>Timetable</a></li>
+      <li><a routerLink='/faq'>FAQ</a></li>
+      <li><a routerLink='/network'>Netwerk</a></li>  
+    </ul>
+  </nav>
