--- a/src/app/livestream/livestream.component.html
+++ b/src/app/livestream/livestream.component.html
@@ -1,2 +1,8 @@
-<h2>Livestream (placeholder)</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/G0IBqtO1K28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="video-container">
+<iframe src="https://www.youtube.com/embed/G0IBqtO1K28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<div class="chat">
+    <h4>test123</h4>
+    <p>Hier komt de chat ongeveer.</p>
+</div>
