--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,20 @@
 <h1>Welkom op de final show website!</h1>
-<nav>
-    <ul>
-      <li><a routerLink='/login'>Log in</a></li>
-      <li><a routerLink='/livestream'>Livestream</a></li>
-      <li><a routerLink='/timetable'>Timetable</a></li>
-      <li><a routerLink='/faq'>FAQ</a></li>
-      <li><a routerLink='/network'>Netwerk</a></li>  
-    </ul>
-  </nav>
+  <img src="assets/images/titlewhite.png" alt="Final Show 2020" id="titleCard">
+
+  <ul>
+    <li><a routerLink='/login'>Log in</a></li>
+    <li><a routerLink='/livestream'>Livestream</a></li>
+    <li><a routerLink='/timetable'>Timetable</a></li>
+    <li><a routerLink='/faq'>FAQ</a></li>
+    <li><a routerLink='/network'>Netwerk</a></li>  
+  </ul>
+
+  
+
+  <div class="rooms">
+    <button (click)="nextRoom(true)"><</button>
+    <button (click)="nextRoom(false)">></button>
+  <h2>{{currentName}}</h2>
+  <img [src]="currentImage" [alt]="currentName">
+  <a [routerLink]="currentLink">Enter room</a>
+  </div>
