--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,13 @@
 
 // $colors: (
 //     "red" : #FF6B6B,
-//     "blue" : #4FCDC4,
+//     "blue" : #7FC6CB,
 //     "yellow" : #F9D48A,
 //     "black" : #000,
 //     "white" : #fff
 // );
 $red : #FF6B6B;
-$blue : #4FCDC4;
+$blue : #7FC6CB;
 $yellow : #F9D48A;
 $black : #000;
 $white : #fff;
@@ -26,6 +26,20 @@ $white : #fff;
 ul {
     list-style: none;
 }
+
+.button {
+    background-color: $red;
+    border: none;
+    border-left: 4px solid $white;
+    color: $white !important;
+    padding: 10px 20px;
+    display: inline-block;
+    font-weight: 500;
+    z-index: 1;
+    text-align: center;
+    box-shadow: 4px 4px 0px $blue, 5px 5px 0px $white;
+    margin-top: 20px;
+  }
 
 a {
     color: $blue
@@ -46,3 +60,5 @@ h1 {
 h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
+
+
