--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,4 +61,17 @@ h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
 
+.page-title {
+    font-weight: bold;
+    font-size: 32pt;
+}
 
+.subtititle {
+    font-weight: normal;
+    font-size: 16pt;
+}
+
+.text {
+    font-weight: lighter;
+    font-size: 13pt;
+}
