--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,4 +1,4 @@
-<h2>Helpdesk</h2>
+<h2 class="page-title">Helpdesk</h2>
 <ul>
     <li><h3>Waarvoor is deze site?</h3>
         <p>Deze site is voor het evenement van de Final Show van de opleiding Multimedia en Communicatie technologie. Meer informatie over de opleiding vind je <a href="https://www.erasmushogeschool.be/nl/opleidingen/multimedia-communicatietechnologie">hier</a>.</p>
