--- a/src/app/timetable/timetable.component.html
+++ b/src/app/timetable/timetable.component.html
@@ -1,6 +1,6 @@
 <h2>Timetable</h2>
 <ul>
-    <li *ngFor='let event of timetable'><h3>{{event["name"]}}</h3>
+    <li *ngFor='let event of timetable'><h3 class="page-title">{{event["name"]}}</h3>
 
         <p>{{displayTime(event["time"]) }}: {{event["desc"]}}</p>
     </li>
