--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@ $white : #fff;
     text-decoration: none;
     color: #000;
     font-weight: 300;
+    line-height: 15px;
 }
 
 ul {
@@ -64,6 +65,12 @@ h2, h3, h4, h5, h6 {
 .page-title {
     font-weight: bold;
     font-size: 32pt;
+}
+
+.title {
+    font-weight: lighter;
+    font-size: 25pt;
+    line-height: 33px;
 }
 
 .subtititle {
