--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,12 +65,13 @@ h2, h3, h4, h5, h6 {
 .page-title {
     font-weight: bold;
     font-size: 32pt;
+    margin-bottom: 5%;
 }
 
 .title {
-    font-weight: lighter;
-    font-size: 25pt;
-    line-height: 33px;
+    font-weight: 300;
+    font-size: 16pt;
+    line-height: 40px;
 }
 
 .subtititle {
