--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -13,6 +13,10 @@
         margin-top: -40px;
     }
 
+    h1 {
+        margin-top: 30px;
+    }
+
     #eventImage {
         transform: translateX(-20px);
         width: 70vw;
