--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,73 +1,117 @@
-@import '~src/styles.scss';
+// @import '~src/styles.scss';
 
-h1 {
-  padding: 20px;
-  margin: auto;
-  text-align: center;
-}
+// h1 {
+//   padding: 20px;
+//   margin: auto;
+//   text-align: center;
+// }
 
-h2 {
-  text-align: center;
-}
+// h2 {
+//   text-align: center;
+// }
 
-#mobile {
-  background-color: $blue;
-  width: 100vw;
-  min-height: 100vh;
-  background-attachment: fixed;
-  scroll-snap-type: y mandatory;
-  overflow-y: hidden;
+// #mobile {
+//   background-color: $blue;
+//   width: 100vw;
+//   min-height: 100vh;
+//   background-attachment: fixed;
+//   scroll-snap-type: y mandatory;
+//   overflow-y: hidden;
 
 
-  #mobileSplashScreen {
-    margin-bottom: 50vh;
+//   #mobileSplashScreen {
+//     margin: auto;
+// display: block;
+//     img {
+//       width: 100%;
+//     }
+//   }
 
-    #titleCard {
-        width: 90vw;
-        display: block;
-        margin: auto;
-      }
-  }
+//   .fullscreen {
+//     width: 100vw;
+//     height: 100vh;
+//     box-sizing: border-box;
+//     scroll-snap-align: start;
+//     scroll-snap-stop: always;
+//     text-align: center;
+//   }
 
-  .fullscreen {
+
+//   #rooms {
+//       img {
+//           margin: auto;
+//       }
+
+//      overflow-y: scroll;
+//      white-space: nowrap;
+//      scroll-snap-type: x proximity;
+
+//       .room {
+//           display: inline-block;
+//           width: 80vw;
+//           scroll-snap-align: center;
+
+//           img {
+//               height: 200px;
+//               display: block;
+//           }
+//       }
+//   }
+
+//   #campus {
+//     overflow: hidden;
+
+// display: flex;
+// flex-direction: column;
+// align-items: center;
+// justify-content: center;
+// padding: 0;
+// img{
+//   margin: 5em 0 0 0;
+// }
+
+//   }
+//   .splash{
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     width: 100%;
+//     height: 100%;
+//     overflow: hidden;
+//   }
+// }
+#mobile{
+  width: 100%;
+overflow: hidden;
+background: rgb(255, 255, 255);
+background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.7) 21%, rgba(79, 205, 196, 0.7) 64%, rgba(0, 212, 255, 0.7) 100%);
+overflow-y: hidden;
+  .splash{
     height: 100vh;
-    padding: 50% 0%;
-    width: 100vw;
-    display: block;
-    box-sizing: border-box;
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
-    text-align: center;
-  }
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-
-  #rooms {
-      img {
-          margin: auto;
-      }
-
-     overflow-y: scroll;
-     white-space: nowrap;
-     scroll-snap-type: x proximity;
-
-      .room {
-          display: inline-block;
-          width: 80vw;
-          scroll-snap-align: center;
-
-          img {
-              height: 200px;
-              display: block;
-          }
-      }
-  }
-
-  #campus {
-    overflow: hidden;
-
-    img {
-      margin-left: -25vw;
+    img{
+      width: 100%;
     }
-
   }
+  #campus{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    img{
+      margin: 5em 0 0 0;
+    }
+    button{
+      width: 90% !important;
+    }
+  }
+
+
 }
