--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,19 +28,35 @@ ul {
     list-style: none;
 }
 
+// .button {
+//     background-color: $red;
+//     border: none;
+//     border-left: 4px solid $white;
+//     color: $white !important;
+//     padding: 10px 20px;
+//     display: inline-block;
+//     font-weight: 500;
+//     z-index: 1;
+//     text-align: center;
+//     box-shadow: 4px 4px 0px $blue, 5px 5px 0px $white;
+//     margin-top: 20px;
+//   }
+
 .button {
-    background-color: $red;
-    border: none;
-    border-left: 4px solid $white;
-    color: $white !important;
-    padding: 10px 20px;
-    display: inline-block;
-    font-weight: 500;
-    z-index: 1;
-    text-align: center;
-    box-shadow: 4px 4px 0px $blue, 5px 5px 0px $white;
-    margin-top: 20px;
-  }
+  background-color: $white;
+  border: none;
+  max-width: 500px;
+  // border-left: 4px solid $white;
+  color: $black !important;
+  padding: 1em 1em;
+  text-transform: uppercase;
+width: 80%;
+font-size: 15px;
+  z-index: 1;
+  text-align: center;
+  box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+  margin-top: 20px;
+}
 
 a {
     color: $blue
@@ -63,6 +79,7 @@ h2, h3, h4, h5, h6 {
 }
 
 .page-title {
+  display: inline-table;
     font-weight: bold;
     font-size: 32pt;
     margin-bottom: 5%;
