--- a/src/app/livestream/livestream.component.scss
+++ b/src/app/livestream/livestream.component.scss
@@ -1,28 +1,28 @@
 /*solution from here https://stackoverflow.com/questions/35814653/automatic-height-when-embedding-a-youtube-video */
-.video-container {
-    position: relative;
-    height: 0;
-}
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-}
 
-.chat {
-    width: 100vw;
-    height: 10vh;
-    position: absolute;
-    z-index: 1;
-    background-color: rgba(255, 255, 255, 0.8);
-    bottom: 0vh;
-    box-sizing: border-box;
-    padding: 20px;
+.video-container{
+  iframe{
+    margin-top: 60px;
+    width: 100%;
+  }
 }
+.chat{
+  width: 100%;
+  height: 100%
+  ;
+}
+// .chat {
+//     width: 100vw;
+//     height: 10vh;
+//     position: absolute;
+//     z-index: 1;
+//     background-color: rgba(255, 255, 255, 0.8);
+//     bottom: 0vh;
+//     box-sizing: border-box;
+//     padding: 20px;
+// }
 
-.name-in-chat {
-    font-weight: normal;
-    font-size: 13pt;
-}
+// .name-in-chat {
+//     font-weight: normal;
+//     font-size: 13pt;
+// }
