--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="pagina">
     <a href="/"><img src="assets/images/door.png" alt="exit"></a>
     <h2 class="pagetitle">FAQ</h2>
