--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,14 +6,14 @@
     <li><a routerLink='/network'>Netwerk</a></li>
   </ul> -->
   <div id="mobile">
-    <div class="splash">
+    <div class="splash" [ngClass]="{'hide': hiddenSplash}">
   <a href="#campus" id="mobileSplashScreen"><img src="assets/images/titlecard.png"
       alt="Final Show 2020" id="titleCard">
   </a>
     </div>
 
 
-    <div id="campus">
+    <div id="campus" [ngClass]="{'hide': hiddenSplash}">
             <a class="button" [routerLink]="['/rooms']" routerLinkActive="router-link-active" >Enter Campus Kaai</a>
       <img src="assets/images/campusV3.png" alt="campus kaai">
 
