--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -80,35 +80,60 @@
 //     overflow: hidden;
 //   }
 // }
-#mobile{
+#mobile {
   width: 100%;
-overflow: hidden;
-background: rgb(255, 255, 255);
-background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.7) 21%, rgba(79, 205, 196, 0.7) 64%, rgba(0, 212, 255, 0.7) 100%);
-overflow-y: hidden;
-  .splash{
+  overflow: hidden;
+  overflow-y: hidden;
+
+  .splash {
     height: 100vh;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    transition: 0.5s ease-in-out;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(-35deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 21%, rgba(79, 205, 196, 0.6) 64%, rgba(0, 212, 255, 0.6) 100%);
+    position: fixed;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    img{
+    &.hide {
+      top: -100vh;
+      opacity: 1;
+    }
+
+    img {
       width: 100%;
     }
   }
-  #campus{
+
+  #campus {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(-35deg, rgba(79, 205, 196, 0.6) 10%,rgba(255, 255, 255, 1)50%);
+    transition: 0.5s ease-in-out;
+    position: fixed;
+    top: 100vh;
+    left: 0;
 
-    img{
+    &.hide {
+      top: 0;
+      z-index: 20;
+    }
+
+    img {
       margin: 5em 0 0 0;
     }
-    button{
+
+    button {
       width: 90% !important;
     }
   }
