--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,9 @@
 <div class="container">
+     <div class="exit">
+       <img src="assets/images/door.png" [routerLink]="['/rooms']" routerLinkActive="router-link-active"  alt="">
+           </div>
   <div class="card">
+
   <div class="body">
     <h1>Final Show</h1>
     <p>Room Navigation</p>
