--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,9 +6,12 @@
 background: white;
 display: flex;
 flex-direction: row;
-justify-content: flex-end;
+justify-content: space-between;
 align-items: center;
 box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
+.exit{
+  margin-left: 1em;
+}
 .card{
   width: 50%;
   display: flex;
@@ -17,6 +20,9 @@ box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
 }
 .body{
   text-align: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   h1{
   text-transform: uppercase;
   font-size: 20px;
