--- a/src/app/roomnav/roomnav.component.html
+++ b/src/app/roomnav/roomnav.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <div class="slidercontainer">
   <div id="rooms" [ngStyle]="{'width': 100*(rooms.length) + '%'}">
 
