--- a/src/app/network/network.component.html
+++ b/src/app/network/network.component.html
@@ -1,1 +1,50 @@
-<p>network works!</p>
+<div class="container">
+  <div class="contacts">
+    <div class="leftside">
+      <div class="usercontainer">
+        <div class="user">
+
+          <div class="profile">
+            <img [src]="user.photoURL || 'assets/man.svg'  " alt="" width="50px">
+            <p>{{ user.displayName }}</p>
+          </div>
+          <div class="logout" (click)="auth.signOut()">
+            <p>logout</p>
+            <div class="cross">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="userscontainer">
+<!-- <ul>
+    <li *ngFor="let chat of userChats$ | async">
+      <a [routerLink]="'rooms/' + chat.id">{{ chat.id }} - {{ chat.messages.length }} Messages </a>
+    </li>
+  </ul> -->
+<app-users></app-users>
+      </div>
+    </div>
+    <div class="rightside flex columns">
+      <!-- <app-rooms></app-rooms> -->
+      <div class="conversations">
+        <h1>Conversations</h1>
+        <div class="conversation" *ngFor="let chats of myChats" [routerLink]="['/chats', chats.id]">
+          <img [src]="'assets/man.svg'" alt="">
+          {{ chats.displayName }}
+
+          <p *ngIf="chats.messages.length" class="last-message">
+            {{ chats.messages[chats.messages.length - 1].content }}
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <!-- <ng-template #credentials>
+    {{goToLogin()}}
+  </ng-template> -->
