Co-authored-by: andreske02 <andres.vergauwen@hotmail.com> register / login css

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="header">
+<section class="container display flex row">
      <div class="exit">
        <img src="assets/images/door.png" [routerLink]="['/rooms']" routerLinkActive="router-link-active"  alt="">
            </div>
@@ -12,5 +13,5 @@
 
   </div>
   </div>
-
+</section>
 </div>
