--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,40 +1,55 @@
-.container{
+.header {
   z-index: 10;
   height: 60px;
   position: fixed;
   width: 100%;
-background: white;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-align-items: center;
-box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
-.exit{
-  margin-left: 1em;
-}
-.card{
-  width: 50%;
+  background: white;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.body{
-  text-align: right;
-  display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
-  h1{
-  text-transform: uppercase;
-  font-size: 20px;
-  }
-  p{
-    font-size: 15px;
+  align-items: center;
+  top: 0;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 
-}
-.profile{
-  width: 40px;
-  height: 40px;
-  background: black;
-}
+  .exit {
+    margin-left: 1em;
+  }
+
+  .card {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .body {
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    h1 {
+      text-transform: uppercase;
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 15px;
+    }
+
+  }
+
+  .profile {
+    margin-left: 1em;
+    width: 40px;
+    height: 40px;
+    background: black;
+  }
 }
