--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,48 +1,46 @@
 
 <section id='login'>
-  <article class="container ">
+  <app-header></app-header>
+  <article class="container login-wrapper">
     <h2>Je bent nog niet ingelogd.</h2>
-
     <p>Om met andere mensen te kunnen chatten hebben we even je tijd nodig om te registreren of in te loggen. Andere
       gebruikers zullen uw profiel kunnen bekijken zodat ze u kunnen contacteren. Uw opgeslagen gegevens worden meteen
       na het evenement vernietigd.</p>
+
+
       <article class="login-container">
         <div id="LoginForm">
-          <article class="container">
+          <article >
             <form class="flex column" [formGroup]="loginEmailForm" (ngSubmit)="EmailPasswordSignIn(loginEmailForm.value)">
               <section class="flex column">
                 <div class="input-form flex column">
-                  <label for="Email">Email</label>
+                  <label for="Email">Email *</label>
                   <input placeholder="Email" type='email' #emailLogin formControlName="email">
                 </div>
                 <div class="input-form flex column">
-                  <label for="Password">Password</label>
+                  <label for="Password">Password *</label>
                   <input placeholder="Password" type='password' autocomplete="on" #passwordLogin formControlName="password">
                 </div>
 
                 <div class="input-form flex column">
-                  <button class="submit">Login</button>
+                  <button class="submit active">LOGIN</button>
                 </div>
               </section>
             </form>
-            <span class="txt-light or">or</span>
-
-
             <section>
-              <div class="google-btn" (click)="auth.googleSignIn()">
+              <button class="google-btn" (click)="auth.googleSignIn()">
                 <div class="google-icon-wrapper">
                   <img class="google-icon-svg"
                     src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
                 </div>
-                <p class="btn-text"><b>Sign in with Google</b></p>
-              </div>
+                LOG IN MET GOOGLE
+              </button>
             </section>
           </article>
         </div>
-
         </article>
 
     <p>Nog geen account?</p>
-    <button [routerLink]="['/register']" type="button">Register</button>
+    <button [routerLink]="['/register']" type="button" class="txt-light">REGISTREER</button>
   </article>
 </section>
