--- a/src/app/components/network/register/register.component.html
+++ b/src/app/components/network/register/register.component.html
@@ -49,7 +49,8 @@
               <select #functie formControlName="functie" required>
                 <option value="student">Student</option>
                 <option value="bedrijf">Bedrijf</option>
-                <option value="leerkracht">Leerkracht</option>
+                <option value="docent">Docent</option>
+                <option value="alumni">Alumni</option>
                 <option value="ouders">Ouder</option>
                 <option value="bezoeker">Bezoeker</option>
               </select>
@@ -85,7 +86,8 @@
               <select #functie formControlName="functie" required>
                 <option value="student">Student</option>
                 <option value="bedrijf">Bedrijf</option>
-                <option value="leerkracht">Leerkracht</option>
+                <option value="docent">Docent</option>
+                <option value="alumni">Alumni</option>
                 <option value="ouders">Ouder</option>
                 <option value="bezoeker">Bezoeker</option>
               </select>
@@ -95,7 +97,7 @@
             <label for="Bio">Bio</label>
             <textarea placeholder="Bio" type='text' #bio formControlName="bio"></textarea>
           </div>
-          <button class="google-btn" (click)="auth.googleSignIn()">
+          <button class="google-btn active" (click)="auth.googleSignIn()">
             <div class="google-icon-wrapper">
               <img class="google-icon-svg"
                 src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
