--- a/src/app/components/network/register/register.component.html
+++ b/src/app/components/network/register/register.component.html
@@ -14,7 +14,7 @@
   <!-- <input placeholder="Username" type='text' #username>
  <button class="button" (click)="auth.AnonymousSignIn(username.value)">Login with Username</button>
   <span class="txt-light">or</span> -->
-  <app-header></app-header>
+  <app-header class="yellow"></app-header>
   <section id="RegisterForm">
 
 
