header, network en chat stylen

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="header">
 <section class="container display flex row">
-     <div class="exit">
-       <img src="assets/images/door.png" [routerLink]="['/rooms']" routerLinkActive="router-link-active"  alt="">
+     <div class="exit" >
+       <img src="assets/images/door.png" *ngIf="back !== 'true'"[routerLink]="['/rooms']" routerLinkActive="router-link-active"  alt="">
+       <img src="assets/images/back.png" *ngIf="back === 'true'" (click)="goBack()" routerLinkActive="router-link-active"
+         alt="">
            </div>
   <div class="card">
 
