--- a/src/app/components/network/network/network.component.html
+++ b/src/app/components/network/network/network.component.html
@@ -1,9 +1,9 @@
+<app-header class="yellow"></app-header>
 <div class="container">
   <div class="contacts">
     <div class="leftside">
       <div class="usercontainer">
         <div class="user">
-
           <div class="profile">
             <img [src]="user.photoURL || 'assets/man.svg'  " alt="" width="50px">
             <p>{{ user.displayName }}</p>
@@ -18,29 +18,22 @@
         </div>
       </div>
       <div class="userscontainer">
-<!-- <ul>
+<ul>
     <li *ngFor="let chat of userChats$ | async">
       <a [routerLink]="'rooms/' + chat.id">{{ chat.id }} - {{ chat.messages.length }} Messages </a>
     </li>
-  </ul> -->
+  </ul>
 <app-users></app-users>
       </div>
     </div>
-    <div class="rightside flex columns">
-      <!-- <app-rooms></app-rooms> -->
-      <div class="conversations">
-        <h1>Conversations</h1>
-        <div class="conversation" *ngFor="let chats of myChats" [routerLink]="['/chats', chats.id]">
-          <img [src]="'assets/man.svg'" alt="">
-          {{ chats.displayName }}
-
-          <p *ngIf="chats.messages.length" class="last-message">
-            {{ chats.messages[chats.messages.length - 1].content }}
-          </p>
-        </div>
+      <app-rooms></app-rooms>
+      <div class="container conversations">
+   <app-conversations></app-conversations>
       </div>
-    </div>
+
   </div>
+
+
 
 
 
