--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,19 +31,6 @@ ul {
     list-style: none;
 }
 
-// .button {
-//     background-color: $red;
-//     border: none;
-//     border-left: 4px solid $white;
-//     color: $white !important;
-//     padding: 10px 20px;
-//     display: inline-block;
-//     font-weight: 500;
-//     z-index: 1;
-//     text-align: center;
-//     box-shadow: 4px 4px 0px $blue, 5px 5px 0px $white;
-//     margin-top: 20px;
-//   }
 
 .button {
   background-color: $white;
@@ -144,6 +131,8 @@ h2, h3, h4, h5, h6 {
 .txt-light{
   color: rgb(167, 167, 167);
   margin-top: 0.5em;
+}.w-100{
+  width: 100%;
 }
 .w-50{
   width: 50%;
