--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -57,9 +57,9 @@
 
 
         <div class="form messagebar">
-          <section class="textBar flex row">
-            <input class="input" [(ngModel)]="newMsg" maxlength="100" placeholder="Typ een chatbericht..."
-              (keydown.enter)="submit(chat.id)">
+          <section class="textBar flex row emoji-picker-container">
+            <input class="input form-control" [(ngModel)]="newMsg" maxlength="100" placeholder="Typ een chatbericht..."
+              (keydown.enter)="submit(chat.id)" data-emojiable="true">
             <button (click)="submit(chat.id)" class="" [disabled]="!newMsg"><img src="assets/images/send.png"></button>
           </section>
         </div>
@@ -68,3 +68,18 @@
     </article>
   </ng-container>
 </ng-container>
+<script>
+  $(function() {
+    // Initializes and creates emoji set from sprite sheet
+    window.emojiPicker = new EmojiPicker({
+      emojiable_selector: '[data-emojiable=true]',
+      assetsPath: '../lib/img/',
+      popupButtonClasses: 'fa fa-smile-o'
+    });
+    // Finds all elements with `emojiable_selector` and converts them to rich emoji input fields
+    // You may want to delay this step if you have dynamically created input fields that appear later in the loading process
+    // It can be called as many times as necessary; previously converted input fields will not be converted again
+    window.emojiPicker.discover();
+  });
+</script>
+
