--- a/src/app/components/network/users/users.component.html
+++ b/src/app/components/network/users/users.component.html
@@ -1,5 +1,5 @@
 <div class='users'>
-  <div *ngFor="let user of allUserData " id="user" (click)='checkIfConversation(user.uid)'>
+  <div *ngFor="let user of data " id="user" (click)='checkIfConversation(user.uid)'>
     <div class="user">
       <div *ngIf="user.status == 'online'" class="dot green"></div>
       <div *ngIf="user.status == 'offline'" class="dot grey"></div>
@@ -7,9 +7,5 @@
       <img [src]="user.photoURL || 'assets/man.svg' " alt="">
       <p>{{ user.displayName }}</p>
     </div>
-    <div class="chat">
-      <img src="assets/icons8-sms-48.png" alt="">
-    </div>
-
   </div>
 </div>
