--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -8,43 +8,77 @@
       <p><a class="tag" routerLink="/network">Back</a></p>
     </div> -->
 
-    <article class="wrapper flex row flex-start">
+    <article class="wrapper flex row flex-start container">
       <!-- <section class="left users flex row w-30">
         <aside>
           <app-users class="rooms"></app-users>
         </aside>
       </section> -->
 
-      <article class="flex column container">
+      <article class="flex column w-100 ">
         <div #chatBox class="chat right " id="chat">
-          <div class="msg animated zoomInUp" *ngFor="let msg of chat.messages; trackBy: trackByCreated">
-            <!-- My MESSAGE -->
-            <div *ngIf="msg.uid === user.uid" class="flex center row right message-content">
+          <div class="msg animated zoomInUp" *ngFor="let msg of chat.messages; let i=index; trackBy: trackByCreated">
+            <!-- My MESSAGE DELETED -->
+            <div *ngIf="msg.uid === user.uid && msg.deleted === true;"
+              class="flex center row right deleted message-content">
               <article>
                 <div>
-                  <div><span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span></div>
+                  <div><span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                  </div>
                   <p>{{ msg.content }}</p>
                 </div>
-
-                <div class="user flex column">
-                  <img [src]="'assets/man.svg'" width="50px">
-
-                </div>
-
+                <!-- <div class="user flex column">
+                      <img [src]="'assets/man.svg'" width="50px">
+                    </div> -->
               </article>
 
-              <!-- <button *ngIf="chat.uid === user.uid || msg.uid === user.uid" class="button is-danger is-small"
-                (click)="cs.deleteMessage(chat, msg)">Delete</button> -->
+            </div>
+
+            <div *ngIf="msg.uid === user.uid && msg.deleted === false;" class="flex center row right message-content">
+              <article>
+                <div>
+                  <div><span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                  </div>
+                  <p>{{ msg.content }}</p>
+                </div>
+                <!-- <div class="user flex column">
+                      <img [src]="'assets/man.svg'" width="50px">
+                    </div> -->
+              </article>
+              <button *ngIf="chat.uid === user.uid || msg.uid === user.uid" class="button delete is-danger is-small"
+                (click)="cs.updateMessage(chat, msg, i)"> &#9249;</button>
             </div>
 
 
-            <!-- OTHER MESSAGE -->
-            <div *ngIf="msg.uid !== user.uid" class="flex center row left  message-content">
-              <article>
-                <div class="user  flex column">
-                  <img [src]="'assets/man.svg'" width="50px">
 
+
+
+
+
+
+
+            <!-- OTHER MESSAGE DELETED -->
+            <div *ngIf="msg.uid !== user.uid && msg.deleted === true;"
+              class="flex center row left deleted message-content">
+              <article>
+                <div>
+                  <div><span class="tag is-dark ">{{ msg.user?.displayName || msg.user?.uid }}</span></div>
+                  <p>{{ msg.content }}</p>
                 </div>
+                <!-- <div class="user flex column">
+        <img [src]="'assets/man.svg'" width="50px">
+      </div> -->
+              </article>
+            </div>
+
+
+
+            <!-- OTHER MESSAGE -->
+            <div *ngIf="msg.uid !== user.uid && msg.deleted === false;" class="flex center row left  message-content">
+              <article>
+                <!-- <div class="user  flex column">
+                  <img [src]="'assets/man.svg'" width="50px">
+                </div> -->
                 <div>
                   <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
                   <p>{{ msg.content }}</p>
@@ -58,9 +92,11 @@
 
         <div class="form messagebar">
           <section class="textBar flex row emoji-picker-container">
+            <p class="flex align-center clap" (click)="submit(chat.id)">👏</p>
             <input class="input form-control" [(ngModel)]="newMsg" maxlength="100" placeholder="Typ een chatbericht..."
               (keydown.enter)="submit(chat.id)" data-emojiable="true">
-            <button (click)="submit(chat.id)" class="" [disabled]="!newMsg"><img src="assets/images/send.png"></button>
+            <button (click)="submit(chat.id)" class="send" [disabled]="!newMsg"><img
+                src="assets/images/send.png"></button>
           </section>
         </div>
       </article>
@@ -68,4 +104,3 @@
     </article>
   </ng-container>
 </ng-container>
-
