--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -19,7 +19,7 @@
         <div #chatBox class="chat right " id="chat">
           <div class="msg animated zoomInUp" *ngFor="let msg of chat.messages; let i=index; trackBy: trackByCreated">
             <!-- My MESSAGE DELETED -->
-            <div *ngIf="msg.uid === user.uid && msg.deleted === true;"
+            <div *ngIf="msg.uid === user.uid && msg.deleted === true && msg.hand !== true;"
               class="flex center row right deleted message-content">
               <article>
                 <div>
@@ -27,14 +27,10 @@
                   </div>
                   <p>{{ msg.content }}</p>
                 </div>
-                <!-- <div class="user flex column">
-                      <img [src]="'assets/man.svg'" width="50px">
-                    </div> -->
               </article>
-
             </div>
-
-            <div *ngIf="msg.uid === user.uid && msg.deleted === false;" class="flex center row right message-content">
+            <!-- My MESSAGE  -->
+            <div *ngIf="msg.uid === user.uid && msg.deleted === false && msg.hand !== true;" class="flex center row right message-content">
               <article>
                 <div>
                   <div><span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
@@ -48,7 +44,20 @@
               <button *ngIf="chat.uid === user.uid || msg.uid === user.uid" class="button delete is-danger is-small"
                 (click)="cs.updateMessage(chat, msg, i)"> &#9249;</button>
             </div>
+            <!-- My MESSAGE empty  -->
+            <div *ngIf="msg.uid === user.uid && msg.hand === true;" class="flex center row right  hand message-content">
+              <article>
+                <div>
+                  <div><span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                  </div>
+                  <p>👏</p>
+                </div>
+                <!-- <div class="user flex column">
+                      <img [src]="'assets/man.svg'" width="50px">
+                    </div> -->
+              </article>
 
+            </div>
 
 
 
@@ -58,23 +67,20 @@
 
 
             <!-- OTHER MESSAGE DELETED -->
-            <div *ngIf="msg.uid !== user.uid && msg.deleted === true;"
+            <div *ngIf="msg.uid !== user.uid && msg.deleted === true && msg.hand !== true;"
               class="flex center row left deleted message-content">
               <article>
                 <div>
                   <div><span class="tag is-dark ">{{ msg.user?.displayName || msg.user?.uid }}</span></div>
                   <p>{{ msg.content }}</p>
                 </div>
-                <!-- <div class="user flex column">
-        <img [src]="'assets/man.svg'" width="50px">
-      </div> -->
               </article>
             </div>
 
 
 
             <!-- OTHER MESSAGE -->
-            <div *ngIf="msg.uid !== user.uid && msg.deleted === false;" class="flex center row left  message-content">
+            <div *ngIf="msg.uid !== user.uid && msg.deleted === false && msg.hand !== true;" class="flex center row left  message-content">
               <article>
                 <!-- <div class="user  flex column">
                   <img [src]="'assets/man.svg'" width="50px">
@@ -86,13 +92,30 @@
 
               </article>
             </div>
+
+
+              <!-- OTHER MESSAGE EM  -->
+              <div *ngIf="msg.uid !== user.uid && msg.hand === true;" class="flex center row left hand message-content">
+                <article>
+                  <div>
+                    <div><span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    </div>
+                    <p>👏</p>
+                  </div>
+                  <!-- <div class="user flex column">
+                        <img [src]="'assets/man.svg'" width="50px">
+                      </div> -->
+                </article>
+
+              </div>
+
           </div>
         </div>
 
 
         <div class="form messagebar">
           <section class="textBar flex row emoji-picker-container">
-            <p class="flex align-center clap" (click)="submit(chat.id)">👏</p>
+            <a class="flex align-center clap" (click)="submitHand(chat.id)">👏</a>
             <input class="input form-control" [(ngModel)]="newMsg" maxlength="100" placeholder="Typ een chatbericht..."
               (keydown.enter)="submit(chat.id)" data-emojiable="true">
             <button (click)="submit(chat.id)" class="send" [disabled]="!newMsg"><img
