css fix livestream mobile

--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -3,10 +3,11 @@
     display: flex;
     height: 50px;
     align-items: center;
-    width: 100%;
-    justify-content: space-between;
-font-weight: bold;
-box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
+    width: 99.5vw;
+    justify-content: flex-start;
+    font-weight: bold;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
+    margin-left: -5%;
   .status{
     justify-content: space-evenly;
     width: 30%;
@@ -17,14 +18,14 @@ box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
           font-weight: 400;
         }
     .state{
-      width: 5px;
-      height: 5px;
+      width: 10px;
+      height: 10px;
       border-radius: 50%;
-      background: red;
+      background: #FF6B6B;
+      margin: auto 0;
     }
   }
   .event{
-    width: 70%;
     p{
       margin-left: 2em;
       font-weight: 400;
@@ -43,30 +44,29 @@ width: 100%;
   .userinput{
     position: absolute;
     bottom: 0;
-    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 10%;
+    width: 90%;
     .send,.clap{
        display: flex;
        align-items: center;
-      width: 10%;
-      height: 100%;
+        width: 10%;
+        height: 100%;
     }
     .message{
           display: flex;
           align-items: center;
-      height: 100%;
+        height: 100%;
 
       input {
         padding: 0.5em 3em;
         width: 100%;
         border: none;
-box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
         width: 100%;
         background:#F0F0F0;
-        border-radius: 10px;
     }
     }
 
