--- a/src/app/components/livestream/livestream/livestream.component.scss
+++ b/src/app/components/livestream/livestream/livestream.component.scss
@@ -1,9 +1,16 @@
 /*solution from here https://stackoverflow.com/questions/35814653/automatic-height-when-embedding-a-youtube-video */
 
 .video-container{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+  margin-top: 60px;
   iframe{
-    margin-top: 60px;
     width: 100%;
+    height: 100%;
+    left:0;
+    position: absolute;
   }
 }
 .chat{
