faq css fix mobile

--- a/src/app/components/livestream/livestream/livestream.component.scss
+++ b/src/app/components/livestream/livestream/livestream.component.scss
@@ -1,4 +1,4 @@
-/*solution from here https://stackoverflow.com/questions/35814653/automatic-height-when-embedding-a-youtube-video */
+// solution from https://www.ostraining.com/blog/coding/responsive-facebook-videos/
 
 .video-container{
   overflow:hidden;
