--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -12,23 +12,14 @@
         margin-top: 80px;
         box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
     }
-
-    .pagetitle {
-        text-align: right;
-    }
-
-    h2.pagetitle {
-        margin-top: -40px;
-    }
-
-    h1 {
-        margin-top: 30px;
-    }
-
     #eventImage {
         transform: translateX(-20px);
         width: 70vw;
         margin-top: 20px;
+    }
+
+    .tekst-event{
+        margin: 3vh 5% 0 5%;
     }
 
     #time {
@@ -36,10 +27,19 @@
         font-weight: 700;
         text-align: center;
         transform: rotateZ(90deg);
+        display: block;
+        position: absolute;
+        top: 23vh;
+        left: 70vw;
     }
 
     p {
         margin-bottom: 20px;
+    }
+
+    a{
+        color: #000;
+        text-decoration: underline;
     }
 
 }
